platform/ingress/gateways.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: local
  namespace: istio-ingress
spec:
  selector:
    app: istio-ingress
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - '*.lvh.me'
