platform/ingress/argocd.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: argocd
  namespace: argocd
spec:
  hosts:
    - argocd.lvh.me
  gateways:
    - istio-ingress/local
  http:
    - route:
        - destination:
            host: argocd-server
            port:
              number: 80
